--- a/teepur/index.html
+++ b/teepur/index.html
@@ -38,7 +38,7 @@
           <div class="row">
             <div class="col-lg-2 text-center text-lg-left">
               <a href="./index.html" class="site-logo">
-                <img src="img/logo.png" alt="" />
+                <img src="img/main-logo.png" alt="" />
               </a>
             </div>
             <div class="col-xl-6 col-lg-5">
